welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:3: error: type mismatch;
 found   : Boolean(false)
 required: Int
	var vuBiscuit:Int=false
                          ^Program:4: error: Int does not take parameters
	if (vuBiscuit()== true) {
                     ^Program:16: error: type mismatch;
 found   : Unit
 required: Boolean
	gauche()
              ^